--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convite de Aniversário!</title>
+    <title>Convite de Aniversário | Ayla Heiki</title>
+    
+    <link rel="icon" href="icone.jpeg" type="image/jpeg">
+
+    <meta property="og:title" content="Convite de Aniversário | Ayla Heiki">
+    <meta property="og:description" content="Venha comemorar meus 6 aninhos!">
+    <meta property="og:image" content="thumb.png">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,19 +21,18 @@
     <div class="card-convite">
         <header>
             <h1>Você está super convidado!</h1>
-            <h2>Para a festa de aniversário do</h2>
             <div class="aniversariante">
-                <span>[Nome da Criança]</span>
+                <span>Ayla Heiki</span>
             </div>
         </header>
 
         <main>
-            <p class="idade">Vamos comemorar meus <strong>6 aninhos!</strong></p>
-            <p class="mensagem">Sua presença é o meu maior presente. Vai ser uma tarde de muita diversão, brincadeiras e bolo!</p>
+            <p class="idade"><strong>6 aninhos!</strong></p>
+            <p class="mensagem">Vai ser uma noite de muita alegria e diversão! A sua presença é importante.</p>
 
             <div class="detalhes">
                 <div class="info-item">
-                    <span class="icone">📅</span>
+                    <span class="icone">🗓️</span>
                     <p><strong>Data:</strong> 04 de Outubro de 2025 (Sábado)</p>
                 </div>
                 <div class="info-item">
@@ -33,7 +40,9 @@
                     <p><strong>Horário:</strong> 19:30</p>
                 </div>
                 <div class="info-item">
-                    <span class="icone">📍</span>
+                    <a href="https://maps.app.goo.gl/YeJPDQuesKLaDVzXA" target="_blank" class="link-mapa">
+                        <span class="icone">📍</span>
+                    </a>
                     <p><strong>Local:</strong> Rua Sergipe, 997 B, Mercadinho</p>
                 </div>
             </div>
@@ -60,7 +69,7 @@
                 </div>
             </div>
 
-            <a href="https://wa.me/5599000000000?text=Olá!%20Confirmo%20minha%20presença%20no%20aniversário%20de%20[Nome%20da%20Criança]!" class="botao-confirmar" target="_blank">
+            <a href="https://wa.me/5599000000000?text=Olá!%20Confirmo%20minha%20presença%20no%20aniversário%20de%20Ayla%20Heiki!" class="botao-confirmar" target="_blank">
                 Confirmar Presença
             </a>
         </main>
@@ -72,4 +81,5 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+                        </html>
+                        
