--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <main>
             <p class="idade"><strong>6 aninhos!</strong></p>
-            <p class="mensagem">Vai ser uma noite de muita alegria e diversão! A sua presença é importante.</p>
+            <p class="mensagem">Vai ser uma noite de muita alegria e diversão!</p>
 
             <div class="detalhes">
                 <div class="info-item">
@@ -41,7 +41,7 @@
                 </div>
                 <div class="info-item">
                     <a href="https://maps.app.goo.gl/YeJPDQuesKLaDVzXA" target="_blank" class="link-mapa">
-                        <span class="icone">📍</span>
+                        📍
                     </a>
                     <p><strong>Local:</strong> Rua Sergipe, 997 B, Mercadinho</p>
                 </div>
@@ -81,5 +81,5 @@
 
     <script src="script.js"></script>
 </body>
-                        </html>
-                        
+    </html>
+    
