--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <h1>Você está super convidado!</h1>
             <div class="aniversariante">
-                <span>Ayla Heiki</span>
+                <span>AYLA HEIKI</span>
             </div>
         </header>
 
@@ -40,9 +40,9 @@
                     <p><strong>Horário:</strong> 19:30</p>
                 </div>
                 <div class="info-item">
-                    <a href="https://maps.app.goo.gl/YeJPDQuesKLaDVzXA" target="_blank" class="link-mapa">
+                    <button class="botao-mapa" onclick="window.open('https://maps.app.goo.gl/YeJPDQuesKLaDVzXA', '_blank')">
                         📍
-                    </a>
+                    </button>
                     <p><strong>Local:</strong> Rua Sergipe, 997 B, Mercadinho</p>
                 </div>
             </div>
@@ -81,5 +81,4 @@
 
     <script src="script.js"></script>
 </body>
-    </html>
-    
+</html>
