--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="card-convite">
         <header>
-            <h1 class="texto-com-fundo">Você está super convidado!</h1>
+            <h1>Você está super convidado!</h1>
             <div class="aniversariante">
                 <span>AYLA HEIKI</span>
             </div>
@@ -50,7 +50,7 @@
             </a>
             
             <div class="contador-regressivo">
-                <h3 class="texto-com-fundo">Faltam para a festa:</h3>
+                <h3>Faltam para a festa:</h3>
                 <div id="countdown">
                     <div class="tempo">
                         <span id="dias">00</span>
