--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Convite de Aniversário | Ayla Heiki">
     <meta property="og:description" content="Venha comemorar meus 6 aninhos!">
-    <meta property="og:image" content="thumb.png">
+    <meta property="og:image" content="https://heikifeitosamatos.github.io/ayla6anos/thumb.png">
     <meta property="og:type" content="website">
 
     <link rel="stylesheet" href="style.css">
@@ -80,3 +80,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
