--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p class="texto-com-fundo">⏰ <strong>Horário:</strong> 19:30</p>
                 </div>
                 <div class="info-item">
-                    <button class="botao-mapa" onclick="window.open('https://maps.app.goo.gl/YeJPDQuesKLaDVzXA', '_blank')">
+                    <button class="botao-mapa" onclick="window.open('https://www.google.com/maps?q=Rua+Sergipe+997+B+Mercadinho', '_blank')">
                         📍
                     </button>
                     <p class="texto-com-fundo"><strong>Local:</strong> Rua Sergipe, 997 B, Mercadinho</p>
@@ -80,4 +80,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
