--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <a href="https://wa.me/5599000000000?text=Olá!%20Confirmo%20minha%20presença%20no%20aniversário%20de%20Ayla%20Heiki!" class="botao-confirmar" target="_blank">
+            <a href="https://forms.gle/HbW4TEHFej7CdnC16" class="botao-confirmar" target="_blank">
                 Confirmar Presença
             </a>
             
@@ -79,4 +79,5 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+                    </html>
+                    
